# fast_vec

./: BENCHMARK_RESULTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: coverage-badge.yml  tests.yml
benches/: dummy.rs  vec2_bench.rs  vec3_bench.rs
scripts/: compare_benchmarks.sh  compare_quick.sh  run_benchmarks.sh
src/: lib.rs  vec2.rs  vec3.rs
